--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 KINDE_CLIENT_ID=610eddacd0364c2f8f64da002ee06919
 KINDE_CLIENT_SECRET=b5B0V9DopKRpLx2SnH0jOOWu9lpknYWfwmvDjg7IMpaILOslQdC
 KINDE_ISSUER_URL=https://yasinsarkar.kinde.com
-KINDE_SITE_URL=https://blog-viewer-next-js-kcum.vercel.app
-KINDE_POST_LOGOUT_REDIRECT_URL=https://blog-viewer-next-js-kcum.vercel.app
-KINDE_POST_LOGIN_REDIRECT_URL=https://blog-viewer-next-js-kcum.vercel.app/dashboard
+KINDE_SITE_URL=http://localhost:3000
+KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
